// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDecorator renders multiple attachments 1`] = `
<td
  class="code"
>
  <div
    data-line-decoration-attachment-portal="true"
    data-testid="line-decoration"
    id="line-decoration-attachment-1"
  >
    <span
      class="lineDecorationAttachment"
      data-line-decoration-attachment="true"
      data-state="closed"
      rel="noreferrer noopener"
    >
      <span
        class="contents"
        data-contents="attachment from extension one"
        data-line-decoration-attachment-content="true"
      />
    </span>
    <span
      class="lineDecorationAttachment"
      data-line-decoration-attachment="true"
      data-state="closed"
      rel="noreferrer noopener"
    >
      <span
        class="contents"
        data-contents="attachment from extension two"
        data-line-decoration-attachment-content="true"
      />
    </span>
  </div>
</td>
`;

exports[`LineDecorator renders one attachment 1`] = `
<td
  class="code"
>
  <div
    data-line-decoration-attachment-portal="true"
    data-testid="line-decoration"
    id="line-decoration-attachment-1"
  >
    <span
      class="lineDecorationAttachment"
      data-line-decoration-attachment="true"
      data-state="closed"
      rel="noreferrer noopener"
    >
      <span
        class="contents"
        data-contents="test content"
        data-line-decoration-attachment-content="true"
      />
    </span>
  </div>
</td>
`;
